[package]
name = "atomic_list"
version = "1.5.0"
edition = "2024"
description = "Lock-free circular ring of intrusive ref-counted nodes plus shared cursors."
license = "MIT"
repository = "https://github.com/orkking2/AtomicList"
documentation = "https://docs.rs/atomic_list"
readme = "README.md"
keywords = ["lock-free", "intrusive", "concurrency", "data-structure", "cursor"]
categories = ["concurrency", "data-structures"]
